[gd_scene load_steps=10 format=3 uid="uid://kwlxmtcx63sv"]

[ext_resource type="Texture2D" uid="uid://bauul3l5r0kyn" path="res://Background Visual.png" id="1_e3m3f"]
[ext_resource type="Script" uid="uid://cb3agxktvdhao" path="res://MainGame.gd" id="1_ws5ob"]
[ext_resource type="PackedScene" uid="uid://cl1h62oafvvpv" path="res://Obstacle.tscn" id="2_bqqt8"]
[ext_resource type="Texture2D" uid="uid://cw7fgoey1tbkv" path="res://Character Visual.png" id="2_ws5ob"]
[ext_resource type="Script" uid="uid://c33xsterrld1y" path="res://player.gd" id="4_pv6b4"]
[ext_resource type="AudioStream" uid="uid://be30xqdgmlr2b" path="res://ambient-simplicity-136218.mp3" id="5_8qpgq"]
[ext_resource type="Texture2D" uid="uid://dpdn8jj8dwtag" path="res://Pulse Runner Visual.png" id="6_8dnxm"]
[ext_resource type="Texture2D" uid="uid://dde5q1bh4qb8g" path="res://TutorialUI Image.png" id="7_v3hs3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bqqt8"]
size = Vector2(279.375, 191.4375)

[node name="MainGame" type="Node2D"]
script = ExtResource("1_ws5ob")
obstacle_scene = ExtResource("2_bqqt8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(270, 525.15247)
scale = Vector2(1.124, 0.7952959)
texture = ExtResource("1_e3m3f")

[node name="Camera2D" type="Camera2D" parent="Sprite2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-727, 68)
scale = Vector2(0.3, 0.3)
script = ExtResource("4_pv6b4")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(963.00006, 524)
scale = Vector2(0.262, 0.25)
texture = ExtResource("2_ws5ob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(943, 527)
shape = SubResource("RectangleShape2D_bqqt8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/GameOverUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "GAME OVER"
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/ScoreLabel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0"
metadata/_edit_use_anchors_ = true

[node name="TitleUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleImage" type="TextureRect" parent="CanvasLayer/TitleUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.39000002
anchor_top = 1.1110001
anchor_right = 1.871
anchor_bottom = 3.3500001
offset_left = -810.4
offset_top = 5.5599976
offset_right = 2578.16
offset_bottom = 1027.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_8dnxm")
expand_mode = 3
stretch_mode = 5

[node name="TitlePrompt" type="Label" parent="CanvasLayer/TitleUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.406
offset_left = 809.0
offset_top = 477.0
offset_right = 954.76
offset_bottom = 500.0
grow_horizontal = 2
text = "RESS SPACE TO CONTINUE"

[node name="TutorialUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TutorialImage" type="TextureRect" parent="CanvasLayer/TutorialUI"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = 80.0
offset_right = 3289.0
offset_bottom = 1151.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_v3hs3")

[node name="TutorialText" type="Label" parent="CanvasLayer/TutorialUI"]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 223.0
offset_bottom = 179.0
text = "HOW TO PLAY
← / → : switch lanes
- Dodge the notes 
- Survive until the song ends.

PRESS SPACE TO START
"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8qpgq")
